jewel-headings: fix margins to avoid extra spaces

--- a/frameworks/themes/JewelTheme/src/main/sass/components-primary/_application.sass
+++ b/frameworks/themes/JewelTheme/src/main/sass/components-primary/_application.sass
@@ -39,27 +39,6 @@ j|Form
 input, select, textarea, button
 	font-family: inherit
 
-h1
-	font-size: 2.5em
-
-h2
-	font-size: 2em
-
-h3
-	font-size: 1.5em
-
-h4
-	font-size: 1.25em
-
-h5
-	font-size: 1em
-
-span
-	font-size: 1em
-
-div
-	font-size: 14px
-
 hr
 	background-color: $default-color
 
